setup project structure and configure core services

--- a/E-commerceAPI/appsettings.json
+++ b/E-commerceAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.; Database=E-commerceAPI; Trusted_Connection=True; TrustServerCertificate=True; Connection Timeout=180;"
+    "DefaultConnection": "Server=db27405.public.databaseasp.net; Database=db27405; User Id=db27405; Password=4Mg@f!C5K2+t; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True; "
 
   },
   "JWTOptions": {
