--- a/E-commerceAPI.BLL/E-commerceAPI.BLL.csproj
+++ b/E-commerceAPI.BLL/E-commerceAPI.BLL.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.8" />
+    <PackageReference Include="QuestPDF" Version="2025.7.1" />
     <PackageReference Include="Stripe.net" Version="48.5.0" />
   </ItemGroup>
 
